# ExplainOfSensorsCalibration

./: README.md
DnetExample/include/common/: ugv_topics.h
DnetExample/src/camera_receive/: CMakeLists.txt  receive_module.cpp
DnetExample/src/lidar_camera/: CMakeLists.txt  receive_module.cpp
DnetExample/src/lidar_receive/: CMakeLists.txt  receive_module.cpp
DnetExample/src/receive/: CMakeLists.txt  receive_module.cpp
DnetExample/src/send/: CMakeLists.txt  send_main.cpp  send_module.cpp
SensorsCalibration/: CMakeLists.txt  manual_change_extrinsic.docx  package.xml
SensorsCalibration/src/: run_lidar2camera.cpp
config/: camera_intrinsic.txt  camera_outparam.txt  top_center_lidar-to-center_camera-extrinsic.json
dnet/: dnet安装read_me.txt
dqt_bag/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_log.cpp  my_log.h  offline_playback.cpp  offline_playback.h  progress.cpp  progress.h
dqt_bag/log/: log.txt
dqt_bag/msg/: ugv_topics.h
dqt_bag/src/: appearance.cpp  main.cpp  mainwindow.cpp  mainwindow.h  offline_playback.cpp  offline_playback.h  playback_main.cpp
dqt_bag/src/msg/: sensor_topics.h  ugv_topics.h
pcdvisual/: CMakeLists.txt  package.xml
pcdvisual/src/: 0.pcd  pcdvisual.cpp
