CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DnetExample)
SET(ALL_PROJECT_TOPLEVEL_PATH "/home/easycool/project/dnet/${PROJECT_NAME}/")
MESSAGE("ALL_PROJECT_TOPLEVEL_PATH: " ${ALL_PROJECT_TOPLEVEL_PATH})

SET(SOURCES_LIST
	send_module.cpp
	send_main.cpp
	../common/timestamp.c
)

INCLUDE_DIRECTORIES(${ALL_PROJECT_TOPLEVEL_PATH}/include/)
LINK_DIRECTORIES(${ALL_PROJECT_TOPLEVEL_PATH}/lib/)

SET(EXECUTABLE_OUTPUT_PATH ${ALL_PROJECT_TOPLEVEL_PATH}/bin)
ADD_EXECUTABLE(send ${SOURCES_LIST})

TARGET_LINK_LIBRARIES(send dnet)

